@@ -29,7 +29,7 @@
  * @run main GetUnsafe
  */
 
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 import static jdk.test.lib.Asserts.*;
 
 public class GetUnsafe {
